Fixed Github button overlay bug on small devices

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -2,7 +2,7 @@
   width: 64px;
   height: 64px;
   background: image-url(GitHub-Mark-64px) no-repeat;
-  position: fixed;
+  position: absolute;
   top: 10px;
   right: 10px;
   padding-left: 30px;
